@@ -1,6 +1,7 @@
 $Id$
 
 0.7.3beta
+	- new feature to select download CSV time format by Riku Meskanen
 	- new Search Field: Expiration by Riku Meskanen
 	- fix import-roots update functionality by Riku Meskanen
 	- forward zone port capability added by Riku Meskanen (db-version 1.4)
